sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:7: error: identifier expected but integer literal found.
    var element : it-1
                     ^